tests/snapshots/rendering__inline_code_in_bold_context.snap
---
source: tests/rendering.rs
expression: "render(\"**bold `code` bold**\")"
---
[bold]bold[code] code[/color] bold[/intensity]
