tests/snapshots/rendering__italic_text.snap
---
source: tests/rendering.rs
expression: "render(\"This is *italic* text.\")"
---
This is[italic] italic[/italic] text.
