tests/snapshots/rendering__link_with_bold_text.snap
---
source: tests/rendering.rs
expression: "render(\"[**bold link**](https://example.com)\")"
---
[underline][bold]bold link[/intensity][/underline][dim] (https://example.com)[/intensity]
