tests/snapshots/rendering__link_with_text.snap
---
source: tests/rendering.rs
expression: "render(\"[click here](https://example.com)\")"
---
[underline]click here[/underline][dim] (https://example.com)[/intensity]
