tests/snapshots/rendering__list_item_with_multiple_paragraphs.snap
---
source: tests/rendering.rs
expression: output
---
• first paragraph

  second paragraph
• next item
