tests/snapshots/rendering__mixed_inline.snap
---
source: tests/rendering.rs
expression: "render(\"Start **bold** middle *italic* end.\")"
---
Start[bold] bold[/intensity] middle[italic] italic[/italic] end.
