tests/snapshots/rendering__multiple_inline_code_spans.snap
---
source: tests/rendering.rs
expression: "render(\"Use `foo` and `bar` together.\")"
---
Use[code] foo[/color] and[code] bar[/color] together.
