tests/snapshots/rendering__nested_unordered_list.snap
---
source: tests/rendering.rs
expression: "render(\"- Top\\n  - Nested\\n    - Deep\\n  - Back\\n- Top again\")"
---
• Top
  • Nested
    • Deep
  • Back
• Top again
