tests/snapshots/rendering__ordered_list_after_heading.snap
---
source: tests/rendering.rs
expression: "render(\"## Section\\n\\n1. First\\n2. Second\")"
---
[bold][underline]Section[/underline][/intensity]

1. First
2. Second
