tests/snapshots/rendering__ordered_list_basic.snap
---
source: tests/rendering.rs
expression: "render(\"1. First\\n2. Second\\n3. Third\")"
---
1. First
2. Second
3. Third
